--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.550.0",
+    "@aws-sdk/cloudfront-signer": "^3.576.0",
     "@aws-sdk/s3-request-presigner": "^3.552.0",
     "@fastify/cors": "^9.0.1",
     "@mux/mux-node": "^8.5.1",
