--- a/.github/workflows/feature-deploy.yml
+++ b/.github/workflows/feature-deploy.yml
@@ -1,17 +1,17 @@
-name: Feature-Deploy.
+name: Feature_Deploy
 on: 
    push: 
     branches: 
         - 'feature**'
 jobs: 
-    testing: 
-      name: Verify code. 
+    Build_and_test: 
+      name: Build and test. 
       runs-on: ubuntu-latest
     
       steps:
         - name: Checkout code
-          uses: actions/checkout@v2
-  
+          uses: actions/checkout@v4
+
         - name: Configure node
           uses: actions/setup-node@v2
           with:
@@ -22,4 +22,14 @@ jobs:
   
         - name: Run tests
           run: npm test
-        
+
+    Pull_Request: 
+        name: Create Pull Request. 
+        runs-on: ubuntu-latest
+        needs: Build_and_test
+
+        steps: 
+           - name: Create Pull Request
+             uses: peter-evans/create-pull-request@v6
+             with: 
+                branch: develop
