--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
     "typescript-eslint": "^7.6.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0"
   },
   "dependencies": {
