fix: corrigindo de novo...

--- a/.github/workflows/feature-deploy.yml
+++ b/.github/workflows/feature-deploy.yml
@@ -2,7 +2,7 @@ name: Feature_Deploy
 on: 
   push: 
     branches: 
-      - 'feature/**'
+      - 'feature**'
 jobs: 
   Build_and_test: 
     name: Build and test
