fix: corrigindo token de acesso read/write.

--- a/.github/workflows/feature-deploy.yml
+++ b/.github/workflows/feature-deploy.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: develop
