--- a/.github/workflows/feature-deploy.yml
+++ b/.github/workflows/feature-deploy.yml
@@ -2,7 +2,7 @@ name: Feature_Deploy
 on: 
   push: 
     branches: 
-      - 'feature**'
+      - 'feature/**'
 jobs: 
   Build_and_test: 
     name: Build and test
@@ -36,4 +36,8 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with: 
           token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'Pull-Request automático'
           branch: develop
+          base: develop
+          title: 'Pull-Request automático'
+          body: 'Esse PR atualiza a branch develop com as últimas features implementadas automáticamente.'
