--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.0.0",
     "@types/fastify-cors": "^2.1.0",
+    "@types/fastify-multipart": "^0.7.0",
     "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
@@ -24,7 +25,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.0.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
@@ -37,9 +38,13 @@
     "@aws-sdk/cloudfront-signer": "^3.576.0",
     "@aws-sdk/s3-request-presigner": "^3.552.0",
     "@fastify/cors": "^9.0.1",
+    "@fastify/multipart": "^9.0.1",
     "@mux/mux-node": "^8.5.1",
     "dotenv": "^16.4.5",
-    "fastify": "^4.26.2",
+    "fastify": "^5.0.0",
+    "fastify-multer": "^2.0.3",
+    "fastify-multipart": "^5.4.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "pulse-api": "file:",
     "tsconfig-paths": "^4.2.0"
