--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@eslint/js": "^9.0.0",
     "@types/fastify-cors": "^2.1.0",
     "@types/fastify-multipart": "^0.7.0",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.16.13",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
@@ -36,6 +36,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.550.0",
     "@aws-sdk/cloudfront-signer": "^3.576.0",
+    "@aws-sdk/lib-storage": "^3.675.0",
     "@aws-sdk/s3-request-presigner": "^3.552.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^9.0.1",
